[project]
name = "mwa_vcs_fluxcal"
version = "0.0.1"
description = "A suite of tools to estimate flux densities for pulsar profiles from MWA VCS data."
authors = [
    { name = "Christopher Lee" },
    { name = "Bradley Meyers" },
]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">= 3.10"
dependencies = [
    "astropy>=5.0",
    "click>=8.0.0",
    "healpy>=1.16.0",
    "matplotlib>=3.5.0",
    "mwa-hyperbeam>=0.9.0",
    "mwalib>=1.8.4",
    "numpy>=1.23.0,<2",
    "requests>=2.32.3",
    "ruff>=0.9.3",
    "scipy>=1.12.0",
    "setuptools>=75.8.0",
]

[project.scripts]
fluxcal = "mwa_vcs_fluxcal.apps.fluxcal:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mwa_vcs_fluxcal = ["data/*"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"
include = [
    "pyproject.toml",
    "src/mwa_vcs_fluxcal/*.py",
    "src/mwa_vcs_fluxcal/apps/*.py",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
]
ignore = [
    # Ignore unused imports
    "F401",
    # Ignore wildcard imports
    "F403",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
